--- a/Projects/Global Oxygen & Emissions/Rise of Salinity in the Past Decade.ipynb
+++ b/Projects/Global Oxygen & Emissions/Rise of Salinity in the Past Decade.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Salinity Concentration & Temperatures of Oceans in the Past Decade"
+    "# Salinity Concentration Data"
    ]
   },
   {
