Updated mma for organizing data

--- a/Projects/ONE Championship/fighters.ipynb
+++ b/Projects/ONE Championship/fighters.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Organizing, extracting, and sorting the data."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +45,89 @@
     "             'fighter1_url', 'fighter2_url', 'referee']\n",
     "for col in removeCol:\n",
     "    df = df.drop(col, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sorting through data and creating a subset containing each unique value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfKO = df[df['win_method'] == 'KO'] # defining new subset dataframe\n",
+    "dfTKO = df[df['win_method'] == 'TKO'] # defining new subset dataframe\n",
+    "dfSub = df[df['win_method'] == 'Submission'] # defining new subset dataframe"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Counting each specific type of KO based on body part used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating array for each unique win_detail\n",
+    "KO_punch = []\n",
+    "KO_kick = []\n",
+    "KO_elbow = []\n",
+    "KO_knee = []\n",
+    "\n",
+    "# Looping through each element in win_details for KOs\n",
+    "for data in dfKO.itertuples():\n",
+    "    # data[7] is the index in the dataset containing the win_details\n",
+    "    if 'Knee' in data[7]: # Counts all KOs containing knee strikes\n",
+    "        KO_knee.append(data[7])\n",
+    "    if 'Punch' in data[7]: # Counts all KOs containing punches\n",
+    "        KO_punch.append(data[7])\n",
+    "    if 'Elbow' in data[7]: # Counts all KOs containing elbows\n",
+    "        KO_elbow.append(data[7])\n",
+    "    if 'Kick' in data[7]: # Counts all KOs containing kicks\n",
+    "        KO_kick.append(data[7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating array for each unique win_detail\n",
+    "tKO_punch = []\n",
+    "tKO_kick = []\n",
+    "tKO_elbow = []\n",
+    "tKO_knee = []\n",
+    "tKO_stop = []\n",
+    "tKO_retire = []\n",
+    "tKO_injury = []\n",
+    "\n",
+    "for data in dfTKO.itertuples():\n",
+    "    # data[7] is the index in the dataset containing the win_details\n",
+    "    if 'Knee' in data[7]: # Counts all KOs containing knee strikes\n",
+    "        tKO_knee.append(data[7])\n",
+    "    if 'Punch' in data[7]: # Counts all KOs containing punches\n",
+    "        tKO_punch.append(data[7])\n",
+    "    if 'Elbow' in data[7]: # Counts all KOs containing elbows\n",
+    "        tKO_elbow.append(data[7])\n",
+    "    if 'Kick' in data[7]: # Counts all KOs containing kicks\n",
+    "        tKO_kick.append(data[7])\n",
+    "    if 'Stop' in data[7]:\n",
+    "        tKO_stop.append(data[7])\n",
+    "    if 'Retire' in data[7]:\n",
+    "        tKO_retire.append(data[7])\n",
+    "    if 'Injury' in data[7]:\n",
+    "        tKO_injury.append(data[7])"
    ]
   },
   {
