Added data sorting

--- a/Projects/(c) PJM Energy/energyPredict.ipynb
+++ b/Projects/(c) PJM Energy/energyPredict.ipynb
@@ -16,19 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import seaborn as sbn\n",
     "import plotly as plt\n",
-    "import numericalmethods as nm"
+    "import numericalmethods as nm\n",
+    "import scipy.optimize as sp\n",
+    "import math\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,11 +49,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         2002-12-31 01:00:00\n",
+       "1         2002-12-31 02:00:00\n",
+       "2         2002-12-31 03:00:00\n",
+       "3         2002-12-31 04:00:00\n",
+       "4         2002-12-31 05:00:00\n",
+       "                 ...         \n",
+       "143201    2018-01-01 20:00:00\n",
+       "143202    2018-01-01 21:00:00\n",
+       "143203    2018-01-01 22:00:00\n",
+       "143204    2018-01-01 23:00:00\n",
+       "143205    2018-01-02 00:00:00\n",
+       "Name: Datetime, Length: 143206, dtype: object"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Using numerical methods to create a model from each dataset\n"
+    "# Using numerical methods to create a model from each dataset\n",
+    "pd.to_numeric(dfw['PJMW_MW'])"
    ]
   },
   {
@@ -86,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
