--- a/Projects/(c) PJM Energy/energyPredict.ipynb
+++ b/Projects/(c) PJM Energy/energyPredict.ipynb
@@ -143388,8 +143388,7 @@
     "# Looping through 'dfw' to sort the data by year and create model\n",
     "for row in dfw.itertuples():\n",
     "    year = row[1][0:4] # ind1 -> tuple key | ind2 -> tuple value\n",
-    "    if year not in usedYears:\n",
-    "        "
+    "    if year not in usedYears:"
    ]
   },
   {
