Created averages of data for interpolation.
Only done for the USW region.

--- a/Projects/(c) PJM Energy/energyPredict.ipynb
+++ b/Projects/(c) PJM Energy/energyPredict.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "import seaborn as sbn\n",
     "import plotly as plt\n",
     "import scipy.optimize as sp\n",
-    "import math\n",
+    "import math as m\n",
     "import numpy as np"
    ]
   },
@@ -143381,14 +143381,21 @@
     "year = 0 # init the year iter var\n",
     "\n",
     "# Temp. list for averaging PJMW_MW vals per year\n",
-    "sumPJMW = []\n",
-    "countPJMW = 0\n",
-    "avgPJMW = 0\n",
+    "valsPJMW = []\n",
     "\n",
     "# Looping through 'dfw' to sort the data by year and create model\n",
     "for row in dfw.itertuples():\n",
     "    year = row[1][0:4] # ind1 -> tuple key | ind2 -> tuple value\n",
-    "    if year not in usedYears:"
+    "    if year in usedYears:\n",
+    "        valsPJMW.append(row[2])\n",
+    "    elif year not in usedYears: # checks for start of new year\n",
+    "        if not usedYears: # check for start of loop\n",
+    "            usedYears.append(year) # appends curr year to usedYears list\n",
+    "            continue\n",
+    "        usedYears.append(year) # appends curr year to usedYears list\n",
+    "        avgPJMW = np.average(valsPJMW) # averages PJMW vals per year before clearing valsPJMW\n",
+    "        valsPJMW.clear() # clears PJMW vals for new year\n",
+    "    "
    ]
   },
   {
@@ -143424,7 +143431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
