Finalized model for USW PJM
Cleaned year values to be whole numbers and created model of regression and found projected values until the year 2034.

--- a/Projects/(c) PJM Energy/energyPredict.ipynb
+++ b/Projects/(c) PJM Energy/energyPredict.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "[143206 rows x 2 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
     "            continue\n",
     "        usedYears.append(year) # appends curr year to usedYears list\n",
     "        tmpAVG = np.average(valsPJMW) # averages PJMW vals per year before clearing valsPJMW\n",
-    "        avgs.append(round(tmpAVG, 2))\n",
+    "        avgs.append(round(tmpAVG, 0))\n",
     "        valsPJMW.clear() # clears PJMW vals for new year\n",
     "        \n",
     "usedYears.pop(-1) # removes year 2018 as there are few PJMW vals for it \n",
@@ -243,26 +243,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "years = np.array(usedYears) # converting lists to array\n",
     "avgPJMWs = np.array(avgs) # converting lists to array\n",
     "\n",
-    "p = np.polyfit(years, avgPJMWs, 1) # 3rd order regression\n",
+    "p = np.polyfit(years, avgPJMWs, 2) # 2rd order regression\n",
     "a = p[0] # parameters (coeff) of regression equation -> 1st param\n",
-    "b = p[1] # parameters (coeff) of regression equation -> 2nd param"
+    "b = p[1] # parameters (coeff) of regression equation -> 2nd param\n",
+    "c = p[2] # parameters (coeff) of regression equation -> 3nd param"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "def year_vs_PJMW_USWest(x): # defining equation obtained from regression of data\n",
-    "    return a*x**2 + b*x"
+    "    return a*x**2 + b*x + c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newPJMWs = [] # temp lists for new PJMWs from regression equation\n",
+    "\n",
+    "startYear = 2018 # year to start regression from\n",
+    "endYear = startYear + len(usedYears) # year to end regression\n",
+    "newYears = np.linspace(startYear, endYear, 16) # year values as list\n",
+    "\n",
+    "for i in range(len(usedYears)): # projected PJMWs per year\n",
+    "    newYears[i] = round(newYears[i], 0) # rounding years to whole num\n",
+    "    newPJMWs.append(round(year_vs_PJMW_USWest(round(newYears[i], 0)), 0))\n",
+    "    \n",
+    "newPJMWs = np.array(newPJMWs) # convert list to array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = np.concatenate( # y-vals of graph -> PJMWs\n",
+    "    (avgPJMWs, newPJMWs),\n",
+    "    axis=0)\n",
+    "\n",
+    "x = np.concatenate( # x-vals of graph -> Years\n",
+    "    (years, newYears),\n",
+    "    axis=0\n",
+    ")"
    ]
   },
   {
@@ -270,13 +306,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "newYears = [] # temp lists for new years for regression equation\n",
-    "newPJMWs = [] # temp lists for new PJMWs from regression equation\n",
-    "\n",
-    "for year in range(len(usedYears)):\n",
-    "    "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -287,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
